# vexide-link-to-c

./: .clangd  .gitignore  Cargo.toml  README.md  toolchain.cmake
.cargo/: config.toml
src/: main.rs
vexc-sys/: Cargo.toml  build.rs  support.c  vexc.c
vexc-sys/src/: lib.rs
