[workspace]
members = ["vexc-sys"]

[package]
name = "vexc"
version = "0.1.0"
edition = "2024"

[dependencies]
vexc-sys = { version = "0.1.0", path = "vexc-sys" }
vexide = { version = "0.8.0", features = ["full", "default-sdk"] }

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
upload-strategy = "differential"
slot = 1
icon = "cool-x"
compress = true
toolchain = "llvm-21.1.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(vexide_toolchain, values("llvm"))'] }
